<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.IconListPreference
        android:defaultValue="ic_launcher"
        android:entries="@array/icon_names"
        android:entryValues="@array/icons"
        android:key="launcherIcon"
        android:summary="@string/change_icon_summary"
        android:title="@string/change_icon"
        app:iconSpaceReserved="false"
        app:icons="@array/icons" />

    <io.legado.app.lib.prefs.Preference
        android:key="welcomeStyle"
        android:title="@string/welcome_style"
        android:summary="@string/welcome_style_summary" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="transparentStatusBar"
        android:summary="@string/status_bar_immersion"
        android:title="@string/immersion_status_bar"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="immNavigationBar"
        android:summary="@string/imm_navigation_bar_s"
        android:title="@string/imm_navigation_bar"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="barElevation"
        android:summary="@string/bar_elevation_s"
        android:title="@string/bar_elevation"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="fontScale"
        android:summary="@string/font_scale_summary"
        android:title="@string/font_scale"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="coverConfig"
        android:title="@string/cover_config"
        android:summary="@string/cover_config_summary"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="themeList"
        android:summary="@string/theme_list_summary"
        android:title="@string/theme_list"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:key="navigation_bar_manage"
        android:summary="@string/navigation_bar_manage_summary"
        android:title="@string/navigation_bar_manage"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="dayThemeCategory"
        android:title="@string/day"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_brown_500"
            android:key="colorPrimary"
            android:summary="@string/day_color_primary"
            android:title="@string/primary"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_red_600"
            android:key="colorAccent"
            android:summary="@string/day_color_accent"
            android:title="@string/accent"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_grey_100"
            android:key="colorBackground"
            android:summary="@string/day_background_color"
            android:title="@string/background_color"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_grey_200"
            android:key="colorBottomBackground"
            android:summary="@string/day_navbar_color"
            android:title="@string/navbar_color"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/background_card"
            android:key="colorBackgroundCard"
            android:summary="@string/day_background_card_color"
            android:title="@string/background_card_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/divider"
            android:key="colorDivider"
            android:summary="@string/day_divider_color"
            android:title="@string/divider_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/white"
            android:key="colorTitleBarTextIcon"
            android:summary="@string/day_title_bar_text_icon_color"
            android:title="@string/title_bar_text_icon_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/white"
            android:key="colorBottomNavIconUnselected"
            android:summary="@string/day_bottom_nav_icon_unselected_color"
            android:title="@string/bottom_nav_icon_unselected_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="colorTextPrimary"
            android:summary="@string/day_text_primary_color"
            android:title="@string/text_primary_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/secondaryText"
            android:key="colorTextSecondary"
            android:summary="@string/day_text_secondary_color"
            android:title="@string/text_secondary_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="colorTextOther"
            android:summary="@string/day_text_other_color"
            android:title="@string/text_other_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />



        <io.legado.app.lib.prefs.Preference
            android:key="backgroundImage"
            android:title="@string/background_image" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="transparentNavBar"
            android:summary="@string/day_nav_bar_immersion"
            android:title="@string/immersion_nav_bar"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="saveDayTheme"
            android:summary="@string/save_day_theme_summary"
            android:title="@string/save_theme_config"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="nightThemeCategory"
        android:title="@string/night"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_blue_grey_600"
            android:key="colorPrimaryNight"
            android:summary="@string/night_primary"
            android:title="@string/primary"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_deep_orange_800"
            android:key="colorAccentNight"
            android:summary="@string/night_accent"
            android:title="@string/accent"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_grey_900"
            android:key="colorBackgroundNight"
            android:summary="@string/night_background_color"
            android:title="@string/background_color"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/md_grey_850"
            android:key="colorBottomBackgroundNight"
            android:summary="@string/night_navbar_color"
            android:title="@string/navbar_color"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/background_card"
            android:key="colorBackgroundCardNight"
            android:summary="@string/night_background_card_color"
            android:title="@string/background_card_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/divider"
            android:key="colorDividerNight"
            android:summary="@string/night_divider_color"
            android:title="@string/divider_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/white"
            android:key="colorTitleBarTextIconNight"
            android:summary="@string/night_title_bar_text_icon_color"
            android:title="@string/title_bar_text_icon_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/white"
            android:key="colorBottomNavIconUnselectedNight"
            android:summary="@string/night_bottom_nav_icon_unselected_color"
            android:title="@string/bottom_nav_icon_unselected_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="colorTextPrimaryNight"
            android:summary="@string/night_text_primary_color"
            android:title="@string/text_primary_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/secondaryText"
            android:key="colorTextSecondaryNight"
            android:summary="@string/night_text_secondary_color"
            android:title="@string/text_secondary_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="colorTextOtherNight"
            android:summary="@string/night_text_other_color"
            android:title="@string/text_other_color"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:cpv_dialogType="preset"
            app:iconSpaceReserved="false" />



        <io.legado.app.lib.prefs.Preference
            android:key="backgroundImageNight"
            android:title="@string/background_image" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="transparentNavBarNight"
            android:summary="@string/night_nav_bar_immersion"
            android:title="@string/immersion_nav_bar"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="saveNightTheme"
            android:summary="@string/save_night_theme_summary"
            android:title="@string/save_theme_config"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>