<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_enable_selection"
        android:title="@string/enable_selection"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_disable_selection"
        android:title="@string/disable_selection"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_top_sel"
        android:title="@string/selection_to_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bottom_sel"
        android:title="@string/selection_to_bottom"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_selection"
        android:title="@string/export_selection"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort_rule"
        android:title="@string/sort_rule"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/menu_sort_new_first"
                android:title="@string/sort_new_first" />

            <item
                android:id="@+id/menu_sort_old_first"
                android:title="@string/sort_old_first" />

            <item
                android:id="@+id/menu_sort_name_asc"
                android:title="@string/sort_name_asc" />

            <item
                android:id="@+id/menu_sort_name_desc"
                android:title="@string/sort_name_desc" />
        </menu>

    </item>

</menu>
