<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="bottom_navigation_view">

    <item
        android:id="@+id/menu_homepage"
        android:checkable="true"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_bookshelf"
        android:checkable="true"
        android:icon="@drawable/ic_bottom_books"
        android:title="@string/bookshelf" />
    <item
        android:id="@+id/menu_discovery"
        android:checkable="true"
        android:icon="@drawable/ic_bottom_explore"
        android:title="@string/discovery" />
    <item
        android:id="@+id/menu_ai_read"
        android:checkable="true"
        android:icon="@drawable/ic_bottom_ai_read"
        android:title="@string/side_nav_assistant" />
    <item
        android:id="@+id/menu_rss"
        android:checkable="true"
        android:icon="@drawable/ic_bottom_rss_feed"
        android:title="@string/rss" />
    <item
        android:id="@+id/menu_my_config"
        android:checkable="true"
        android:icon="@drawable/ic_bottom_person"
        android:title="@string/my" />

</menu>
