<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    android:padding="16dp">

    <io.legado.app.ui.widget.text.PrimaryTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_excluded_tag"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@android:color/transparent"
        app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_tag_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/excluded_tag_name"
                android:inputType="text"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:background="@android:color/transparent" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="0dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/dialog_cancel"
            android:textSize="14sp" />

        <io.legado.app.ui.widget.text.AccentTextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="16dp"
            android:paddingTop="0dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/dialog_confirm"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>